home-page new-changes

--- a/index.html
+++ b/index.html
@@ -33,44 +33,12 @@
 </head>
 
 <body>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script>const swiper = new Swiper('.swiper', {
-            // Optional parameters
-            direction: 'horizontal',
-            slidesPerView: 5,
-            loop: true,
-            breakpoints: {
-                // when window width is >= 320px
-                320: {
-                    slidesPerView: 2,
-                    spaceBetween: 20
-                },
-                // when window width is >= 480px
-                480: {
-                    slidesPerView: 3,
-                    spaceBetween: 30
-                },
-                // when window width is >= 640px
-                640: {
-                    slidesPerView: 4,
-                    spaceBetween: 40
-                },
-                992: {
-                    slidesPerView: 7,
-                    spaceBetween: 10
-                }
-            }
-        });
-
-    </script>
     <!-- swiper home page -->
     <header>
         <div class="own-container">
             <div class="d-flex align-items-center justify-content-between ">
-                <div class="col-lg-5 col-5">
+                <div class="col-lg-5 col-md-5 col-9">
                     <p class="nav-bar-p">+994(12) 123 45 67 | Fətəli Xan Xoyski 111A, Bakı Azərbaycan</p>
                 </div>
                 <div class="col-lg-3 col-3 col-md-2">
@@ -170,56 +138,56 @@
         <div class="techniques">
             <p class="tech-card-head_P">Kateqoriyalar</p>
             <div class=" row g-3">
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12 ">
+                <div class="col-6 col-lg-3 col-md-6 col-sm-12 ">
                     <div class="tech-card">
 
                         <p class="tech-cards_p">Avtokranlar</p>
                         <img src="./assets/photo/image 39.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12 ">
+                <div class="col-6 col-lg-3 col-md-6 col-sm-12 ">
                     <div class="tech-card">
 
                         <p class="tech-cards_p">Traktorlar</p>
                         <img src="./assets/photo/home-page-2.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12 ">
+                <div class="col-6 col-lg-3 col-md-6 col-sm-12 ">
                     <div class="tech-card">
 
-                        <p class="tech-cards_p">Qaldırıcı səbətlər</p>
+                        <p class="tech-cards_p">Qaldırıcı</p>
                         <img src="./assets/photo/home-page-3.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12 ">
+                <div class="col-6 col-lg-3 col-md-6 col-sm-12 ">
                     <div class="tech-card">
 
                         <p class="tech-cards_p">Forkliftlər</p>
                         <img src="./assets/photo/home-page-4.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12 ">
+                <div class="col-6 col-lg-3 col-md-6 col-sm-12 ">
                     <div class="tech-card">
 
                         <p class="tech-cards_p">Katok</p>
                         <img src="./assets/photo/home-page-5.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12 ">
+                <div class="col-6 col-lg-3 col-md-6 col-sm-12 ">
                     <div class="tech-card">
 
                         <p class="tech-cards_p">Shacman</p>
                         <img src="./assets/photo/home-page-6.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12">
+                <div class="col-6 col-lg-3 col-md-6 col-sm-12">
                     <div class="tech-card">
 
                         <p class="tech-cards_p">Avtokranlar</p>
                         <img src="./assets/photo/home-page-7.png" alt="photo">
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 col-sm-12">
+                <div class="col-6 col-lg-3 col-md-6 col-sm-12">
                     <div class="tech-card">
                         <p class="tech-cards_p">Pompa</p>
                         <img src="./assets/photo/home-page-8.png" alt="photo">
@@ -234,8 +202,8 @@
                 <div class="left-sc-img">
                     <img src="./assets/photo/home-page-left-img1.png" alt="">
                 </div>
-            </div>
-            <div class="col-6 col-lg-6 col-sm-12 col-md-12 col-12">
+            </div> 
+            <div class="col-12 col-lg-6 col-sm-12 col-md-12  ">
                 <div class="right-sc">
                     <img src="./assets/photo/home-page-right.png" alt="">
                 </div>
@@ -254,8 +222,8 @@
     <div class="own-container">
         <div class="techniques">
             <p class="tech-card-head_P">Texnikalar</p>
-            <div class="row">
-                <div class="col">
+            <div class="row g-5">
+                <div class="col-lg-3">
                     <div class="tech-cards">
                         <img src="./assets/photo/home-page-2.png" alt="">
                         <div class="tech-card-text">
@@ -272,7 +240,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-3">
                     <div class="tech-cards">
                         <img src="./assets/photo/home-page-6.png" alt="">
                         <div class="tech-card-text">
@@ -289,7 +257,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-3">
                     <div class="tech-cards">
                         <img src="./assets/photo/home-page-8.png" alt="">
                         <div class="tech-card-text">
@@ -306,7 +274,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-3">
                     <div class="tech-cards">
                         <img src="./assets/photo/home-page-4.png" alt="">
                         <div class="tech-card-text">
@@ -329,7 +297,6 @@
             </div>
         </div>
     </div>
-
     <div class="marks">
         <div class="mark-head-p">
             <p>Markalar</p>
@@ -366,9 +333,87 @@
 
         </div>
     </div>
+    <div class="own-container">
+        <div class="innovations_part">
+            <div class="row g-5">
+                <h1>Yeniliklər</h1>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="innovations-card">
+                        <img src="./assets/photo/yeni1.png" alt="">
+                        <div class="innovations_card_text">
+                            <p>Lorem Ipsum is simply dummy</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
+                            <p>01.04.2022</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="innovations-card">
+                        <img src="./assets/photo/yeni2.png" alt="">
+                        <div class="innovations_card_text">
+                            <p>Lorem Ipsum is simply dummy</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
+                            <p>01.04.2022</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="innovations-card">
+                        <img src="./assets/photo/yeni3.png" alt="">
+                        <div class="innovations_card_text">
+                            <p>Lorem Ipsum is simply dummy</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
+                            <p>01.04.2022</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="innovations-card">
+                        <img src="./assets/photo/yeni4.png" alt="">
+                        <div class="innovations_card_text">
+                            <p>Lorem Ipsum is simply dummy</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
+                            <p>01.04.2022</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script>const swiper = new Swiper('.swiper', {
+            // Optional parameters
+            direction: 'horizontal',
+            slidesPerView: 5,
+            loop: true,
+            breakpoints: {
+                // when window width is >= 320px
+                320: {
+                    slidesPerView: 2,
+                    spaceBetween: 20
+                },
+                // when window width is >= 480px
+                480: {
+                    slidesPerView: 3,
+                    spaceBetween: 30
+                },
+                // when window width is >= 640px
+                640: {
+                    slidesPerView: 4,
+                    spaceBetween: 40
+                },
+                992: {
+                    slidesPerView: 7,
+                    spaceBetween: 10
+                }
+            }
+        });
+
+    </script>
 </body>
 
 </html>
