--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <div class="left-sc-img">
                     <img src="./assets/photo/home-page-left-img1.png" alt="">
                 </div>
-            </div> 
+            </div>
             <div class="col-12 col-lg-6 col-sm-12 col-md-12  ">
                 <div class="right-sc">
                     <img src="./assets/photo/home-page-right.png" alt="">
@@ -380,6 +380,76 @@
             </div>
         </div>
     </div>
+    <div class="contact-part__all">
+        <div class="contact-part">
+            <div class="cont-text">
+                <h1>Bizimlə əlaqə saxla!</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                    the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type
+                    and
+                    scrambled</p>
+            </div>
+            <div class="contact-input ">
+                <div class="con-inp-all ">
+                    <div class="con-inp">
+                        <input placeholder="Ad, Soyad" type="text">
+                        <input placeholder="Şirkətin adı" type="text">
+                    </div>
+                    <div class="con-inp">
+                        <input placeholder="E-mail" type="email">
+                        <input placeholder="Telefon" type="number">
+                    </div>
+                </div>
+            </div>
+            <div class="contact-buttn">
+                <button>Göndər</button>
+            </div>
+        </div>
+        <div class="contackt-img con-right">
+            <img src="./assets/photo/contack-part_img.png" alt="">
+        </div>
+    </div>
+    <div class="own-container">
+        <div class="row">
+            <div class="foot-top-part">
+                <div class="col-lg-6">
+                    <div class="foot-top-text">
+                        <p class="foot-top-text-p1">Niyə bizi seçməlisiniz...</p>
+                        <p class="foot-top-text-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been
+                            the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                            galley
+                            of type and scrambled <br> <br> 
+                            It is a long established fact that a reader will be distracted by the readable content of a
+                            page
+                            when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
+                            normal
+                            distribution of letters, as opposed to using 'Content here, content here', making it look
+                            like
+                            readable English</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="foot-top-img">
+                        <img src="./assets/photo/image 8.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
