new-changes-hom -page

--- a/index.html
+++ b/index.html
@@ -417,11 +417,12 @@
                 <div class="col-lg-6">
                     <div class="foot-top-text">
                         <p class="foot-top-text-p1">Niyə bizi seçməlisiniz...</p>
-                        <p class="foot-top-text-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                        <p class="foot-top-text-p2">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has
                             been
                             the industry's standard dummy text ever since the 1500s, when an unknown printer took a
                             galley
-                            of type and scrambled <br> <br> 
+                            of type and scrambled <br> <br>
                             It is a long established fact that a reader will be distracted by the readable content of a
                             page
                             when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
@@ -439,7 +440,48 @@
             </div>
         </div>
     </div>
-
+    <div class="own-container">
+        <footer>
+            <div class="row g-5">
+                <div class="col-lg-3">
+                    <div class="footer-log=">
+                        <h1>Logo</h1>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="foot-about">
+                        <div class="foot-about-text">
+                            <p>Haqqımızda</p>
+                            <p>Texnikalar</p>
+                            <p>İcarə şərtləri</p>
+                            <p>Blog</p>
+                            <p>Əlaqə</p>
+                        </div>
+                        <div class="foot-contact">
+                            <p>Fətəli Xan Xoyski 111A, Bakı Azərbaycan</p>
+                            <p>+994(12) 123 45 67</p>
+                            <p>+994(12) 123 45 67</p>
+                            <p>info@lmegatexnika.az</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="foot-icon_text">
+                        <p>Qrafik (iş saatlarımız): B.e - Ş. 10:00 - 19:00</p>
+                    </div>
+                    <div class="foot-icon">
+                        <i class="fa-brands fa-instagram" style="color: #353535;"></i>
+                        <i class="fa-brands fa-facebook" style="color: #353535;"></i>
+                        <i class="fa-brands fa-twitter " style="color: #353535;"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="foot-bottom">
+                <p>© 2022 Megatexnika / Müəllif hüquqları</p>
+                <p>Design by JEDAİ</p>
+            </div>
+        </footer>
+    </div>
 
 
 
