--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="innovations-card">
-                        <img src="./assets/photo/yeni2.png" alt="">
+                        <img src="./assets/photo/yeni1.png" alt="">
                         <div class="innovations_card_text">
                             <p>Lorem Ipsum is simply dummy</p>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
@@ -357,6 +357,7 @@
                         </div>
                     </div>
                 </div>
+              
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="innovations-card">
                         <img src="./assets/photo/yeni3.png" alt="">
@@ -411,10 +412,11 @@
             <img src="./assets/photo/contack-part_img.png" alt="">
         </div>
     </div>
-    <div class="own-container">
+
+    <!-- <div class="own-container">
+        <div class="foot-top-part">
         <div class="row">
-            <div class="foot-top-part">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-12">
                     <div class="foot-top-text">
                         <p class="foot-top-text-p1">Niyə bizi seçməlisiniz...</p>
                         <p class="foot-top-text-p2">Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -432,23 +434,24 @@
                             readable English</p>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-12">
                     <div class="foot-top-img">
                         <img src="./assets/photo/image 8.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="own-container">
-        <footer>
-            <div class="row g-5">
-                <div class="col-lg-3">
-                    <div class="footer-log=">
+    </div> -->
+
+    <footer>
+        <div class="own-container">
+            <div class="row g-2">
+                <div class="col-lg-3 ">
+                    <div class="footer-log ">
                         <h1>Logo</h1>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-5 ">
                     <div class="foot-about">
                         <div class="foot-about-text">
                             <p>Haqqımızda</p>
@@ -465,7 +468,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 ">
                     <div class="foot-icon_text">
                         <p>Qrafik (iş saatlarımız): B.e - Ş. 10:00 - 19:00</p>
                     </div>
@@ -476,12 +479,14 @@
                     </div>
                 </div>
             </div>
-            <div class="foot-bottom">
-                <p>© 2022 Megatexnika / Müəllif hüquqları</p>
-                <p>Design by JEDAİ</p>
+            <div class="foot-subtitle">
+                <div class="foot-bottom">
+                    <p>© 2022 Megatexnika / Müəllif hüquqları</p>
+                    <p>Design by JEDAİ</p>
+                </div>
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
 
 
 
@@ -503,17 +508,17 @@
             slidesPerView: 5,
             loop: true,
             breakpoints: {
-                // when window width is >= 320px
+                // when window width is >= 20rem
                 320: {
                     slidesPerView: 2,
                     spaceBetween: 20
                 },
-                // when window width is >= 480px
+                // when window width is >= 30rem
                 480: {
                     slidesPerView: 3,
                     spaceBetween: 30
                 },
-                // when window width is >= 640px
+                // when window width is >= 40rem
                 640: {
                     slidesPerView: 4,
                     spaceBetween: 40
