--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto   gap-5">
                                     <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="#">Əsas səhifə</a>
+                                        <a class="nav-link active" aria-current="page" href="./index.html">Əsas
+                                            səhifə</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Haqqımızda</a>
+                                        <a class="nav-link" href="./_about.html">Haqqımızda</a>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" role="button"
@@ -357,7 +358,7 @@
                         </div>
                     </div>
                 </div>
-              
+
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="innovations-card">
                         <img src="./assets/photo/yeni3.png" alt="">
@@ -412,10 +413,9 @@
             <img src="./assets/photo/contack-part_img.png" alt="">
         </div>
     </div>
-
-    <!-- <div class="own-container">
+    <div class="own-container">
         <div class="foot-top-part">
-        <div class="row">
+            <div class="row">
                 <div class="col-lg-6 col-12">
                     <div class="foot-top-text">
                         <p class="foot-top-text-p1">Niyə bizi seçməlisiniz...</p>
@@ -441,8 +441,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
-
+    </div>
     <footer>
         <div class="own-container">
             <div class="row g-2">
