--- a/techniques.html
+++ b/techniques.html
@@ -69,7 +69,7 @@
                                         <a class="nav-link active" aria-current="page" href="#">Əsas səhifə</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Haqqımızda</a>
+                                        <a class="nav-link" href="./_about.html">Haqqımızda</a>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" role="button"
@@ -110,118 +110,12 @@
             </div>
         </div>
     </div>
-    <section>
-        <p class="section-1_p1">megaTexnika</p>
-        <p class="section-1_p2">Haqqımızda</p>
-        <p class="section-1_p3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> Lorem
-            Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled</p>
-    </section>
-    <div class="section_2">
-        <img src="./assets/photo/about-page.png" alt="">
+    <div class="tech-text">
+        <p>Texnikalar</p>
     </div>
-    <div class="own-container">
-        <div class="row mt-5">
-            <div class="col-md d-none d-sm-block">
-                <div class="left-sc-img">
-                    <img src="./assets/photo/home-page-left-img1.png" alt="">
-                </div>
-            </div>
-            <div class="col-12 col-lg-6 col-sm-12 col-md-12  ">
-                <div class="right-sc">
-                    <img src="./assets/photo/home-page-right.png" alt="">
-                </div>
-                <div class="right-sc-text">
-                    <p class="sec-1-p1">Mega Texnika-da sınaqdan keçirilmiş texnikalar</p>
-                    <p class="sec-1-p2">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled
-                    </p>
-                    <button class="sec-1-button">Haqqımızda</button>
-                </div>
-            </div>
-        </div>
-    </div> <br><br><br><br><br><br>
-    <div class="own-container">
-        <div class="foot-top-part">
-            <div class="row">
-                <div class="col-lg-6 col-12">
-                    <div class="foot-top-text">
-                        <p class="foot-top-text-p1">Niyə bizi seçməlisiniz...</p>
-                        <p class="foot-top-text-p2">Lorem Ipsum is simply dummy text of the printing and typesetting
-                            industry. Lorem Ipsum has
-                            been
-                            the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                            galley
-                            of type and scrambled <br> <br>
-                            It is a long established fact that a reader will be distracted by the readable content of a
-                            page
-                            when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                            normal
-                            distribution of letters, as opposed to using 'Content here, content here', making it look
-                            like
-                            readable English</p>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-12">
-                    <div class="foot-top-img">
-                        <img src="./assets/photo/image 8.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="techs_list">
+
     </div>
-    <footer>
-        <div class="own-container">
-            <div class="row g-2">
-                <div class="col-lg-3 ">
-                    <div class="footer-log ">
-                        <h1>Logo</h1>
-                    </div>
-                </div>
-                <div class="col-lg-5 ">
-                    <div class="foot-about">
-                        <div class="foot-about-text">
-                            <p>Haqqımızda</p>
-                            <p>Texnikalar</p>
-                            <p>İcarə şərtləri</p>
-                            <p>Blog</p>
-                            <p>Əlaqə</p>
-                        </div>
-                        <div class="foot-contact">
-                            <p>Fətəli Xan Xoyski 111A, Bakı Azərbaycan</p>
-                            <p>+994(12) 123 45 67</p>
-                            <p>+994(12) 123 45 67</p>
-                            <p>info@lmegatexnika.az</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 ">
-                    <div class="foot-icon_text">
-                        <p>Qrafik (iş saatlarımız): B.e - Ş. 10:00 - 19:00</p>
-                    </div>
-                    <div class="foot-icon">
-                        <i class="fa-brands fa-instagram" style="color: #353535;"></i>
-                        <i class="fa-brands fa-facebook" style="color: #353535;"></i>
-                        <i class="fa-brands fa-twitter " style="color: #353535;"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="foot-subtitle">
-                <div class="foot-bottom">
-                    <p>© 2022 Megatexnika / Müəllif hüquqları</p>
-                    <p>Design by JEDAİ</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
