--- a/index.html
+++ b/index.html
@@ -325,6 +325,27 @@
                 <div class="swiper-slide">
                     <img src="./assets/photo/mark7.png" alt="photo">
                 </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark1.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark2.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark3.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark4.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark5.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark6.png" alt="photo">
+                </div>
+                <div class="swiper-slide">
+                    <img src="./assets/photo/mark7.png" alt="photo">
+                </div>
             </div>
         </div>
         <div class="mark">
@@ -506,6 +527,9 @@
             direction: 'horizontal',
             slidesPerView: 5,
             loop: true,
+            autoplay: {
+                delay: 1000,
+            },
             breakpoints: {
                 // when window width is >= 20rem
                 320: {
