--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto   gap-5">
                                     <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="./index.html">Əsas
-                                            səhifə</a>
+                                        <a class="nav-link active" aria-current="page" href="#">Əsas səhifə</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="./_about.html">Haqqımızda</a>
@@ -81,7 +80,7 @@
 
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Avtokranlar</a></li>
+                                            <li><a class="dropdown-item" href="./tech-about.html">Etrafli</a></li>
                                             <li><a class="dropdown-item" href="#">Traktorlar</a></li>
                                             <li><a class="dropdown-item" href="#">Qaldırıcı səbətlər</a></li>
                                             <li><a class="dropdown-item" href="#">Forkliftlər</a></li>
@@ -103,11 +102,7 @@
                                 </ul>
                                 <div class="col-lg-2 col-md-">
                                     <div class="language d-flex justify-content-end gap-2">
-                                        <span class="lang-hover">Az</span>
-                                        <span>|</span>
-                                        <span class="lang-hover">EN</span>
-                                        <span>|</span>
-                                        <span class="lang-hover">RU</span>
+                                        <img src="./assets/logo/Group 29.png" alt="">
                                     </div>
                                 </div>
                             </div>
