--- a/techniques.html
+++ b/techniques.html
@@ -78,7 +78,7 @@
 
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Avtokranlar</a></li>
+                                            <li><a class="dropdown-item" href="./tech-about.html">Etrafli</a></li>
                                             <li><a class="dropdown-item" href="#">Traktorlar</a></li>
                                             <li><a class="dropdown-item" href="#">Qaldırıcı səbətlər</a></li>
                                             <li><a class="dropdown-item" href="#">Forkliftlər</a></li>
