new-changes-product-pages

--- a/_about.html
+++ b/_about.html
@@ -110,14 +110,14 @@
             </div>
         </div>
     </div>
-    <section>
+    <div class="section">
         <p class="section-1_p1">megaTexnika</p>
         <p class="section-1_p2">Haqqımızda</p>
         <p class="section-1_p3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> Lorem
             Ipsum has been the
             industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
             scrambled</p>
-    </section>
+    </div>
     <div class="section_2">
         <img src="./assets/photo/about-page.png" alt="">
     </div>
