--- a/tech-about.html
+++ b/tech-about.html
@@ -130,7 +130,7 @@
                 <img src="./assets/photo/tech-about-sec-1.png" alt="">
             </div>
             <div class="product-name-part">
-                <div class="product-name-txt">
+                <div class="product-head-txt">
                     <p class="product-name-txt1">Məhsulun adı</p>
                     <p class="product-name-txt2">2017</p>
                 </div>
@@ -140,6 +140,18 @@
                 <div class="product-part-lorem">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the industry's standard dummy text ever since the 1500s, when an unknown printer</p>
+                </div>
+                <div class="rent-price-txt">
+                    <div class="rent-price-txt_in">
+                        <p>Günlük icarə:
+                            <span>1000 AZN</span>
+                        </p>
+                    </div>
+                    <div class="rent-price-txt_in">
+                        <p>Günlük icarə:
+                            <span>1000 AZN</span>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
