--- a/tech-about.html
+++ b/tech-about.html
@@ -129,14 +129,16 @@
             <div class="rent-sec-img-part2">
                 <img src="./assets/photo/tech-about-sec-1.png" alt="">
             </div>
-            <div class="product-name-part">
-                <div class="product-head-txt">
-                    <p class="product-name-txt1">Məhsulun adı</p>
-                    <p class="product-name-txt2">2017</p>
+            <div class="product--part">
+                <div class="product-head-txt-all">
+                    <div class="product-head-txt">
+                        <p class="product-name-txt1">Məhsulun adı</p>
+                        <p class="product-name-txt2">2017</p>
+                    </div>
+                    <span>
+                        <p class="product-name-bottom-txt">Ekskavator</p>
+                    </span>
                 </div>
-                <span>
-                    <p class="product-name-bottom-txt">Ekskavator</p>
-                </span>
                 <div class="product-part-lorem">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the industry's standard dummy text ever since the 1500s, when an unknown printer</p>
@@ -144,22 +146,141 @@
                 <div class="rent-price-txt">
                     <div class="rent-price-txt_in">
                         <p>Günlük icarə:
-                            <span>1000 AZN</span>
                         </p>
+                        <span>1000 AZN</span>
                     </div>
                     <div class="rent-price-txt_in">
                         <p>Günlük icarə:
-                            <span>1000 AZN</span>
                         </p>
+                        <span>1000 AZN</span>
+                    </div>
+                </div>
+                <div class="rent-button">
+                    <button>Rent a day</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="own-container">
+        <div class="techniques">
+            <p class="tech-card-head_P">Oxşar texnikalar</p>
+            <div class="row g-5">
+                <div class="col-lg-3">
+                    <div class="tech-cards">
+                        <img src="./assets/photo/home-page-2.png" alt="">
+                        <div class="tech-card-text">
+                            <p class="tech-card-p1">Məhsulun adı</p>
+                            <p class="tech-card-p2">Ekskavator</p>
+                            <p class="tech-card-p3">2022</p>
+                        </div>
+                        <div class="tech-card-text2">
+                            <p>1000 AZN / ay</p>
+                            <p>100 AZN / gün</p>
+                        </div>
+                        <div class="tech-card-btn">
+                            <button>İcarə et</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="tech-cards">
+                        <img src="./assets/photo/home-page-6.png" alt="">
+                        <div class="tech-card-text">
+                            <p class="tech-card-p1">Məhsulun adı</p>
+                            <p class="tech-card-p2">Ekskavator</p>
+                            <p class="tech-card-p3">2022</p>
+                        </div>
+                        <div class="tech-card-text2">
+                            <p>1000 AZN / ay</p>
+                            <p>100 AZN / gün</p>
+                        </div>
+                        <div class="tech-card-btn">
+                            <button>İcarə et</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="tech-cards">
+                        <img src="./assets/photo/home-page-8.png" alt="">
+                        <div class="tech-card-text">
+                            <p class="tech-card-p1">Məhsulun adı</p>
+                            <p class="tech-card-p2">Ekskavator</p>
+                            <p class="tech-card-p3">2022</p>
+                        </div>
+                        <div class="tech-card-text2">
+                            <p>1000 AZN / ay</p>
+                            <p>100 AZN / gün</p>
+                        </div>
+                        <div class="tech-card-btn">
+                            <button>İcarə et</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="tech-cards">
+                        <img src="./assets/photo/home-page-4.png" alt="">
+                        <div class="tech-card-text">
+                            <p class="tech-card-p1">Məhsulun adı</p>
+                            <p class="tech-card-p2">Ekskavator</p>
+                            <p class="tech-card-p3">2022</p>
+                        </div>
+                        <div class="tech-card-text2">
+                            <p>1000 AZN / ay</p>
+                            <p>100 AZN / gün</p>
+                        </div>
+                        <div class="tech-card-btn">
+                            <button>İcarə et</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <br><br><br><br>
-    <br><br><br><br>
-
-
+    <br><br><br><br><br>
+    <footer>
+        <div class="own-container">
+            <div class="row g-2">
+                <div class="col-lg-3 ">
+                    <div class="footer-log ">
+                        <h1>Logo</h1>
+                    </div>
+                </div>
+                <div class="col-lg-5 ">
+                    <div class="foot-about">
+                        <div class="foot-about-text">
+                            <p>Haqqımızda</p>
+                            <p>Texnikalar</p>
+                            <p>İcarə şərtləri</p>
+                            <p>Blog</p>
+                            <p>Əlaqə</p>
+                        </div>
+                        <div class="foot-contact">
+                            <p>Fətəli Xan Xoyski 111A, Bakı Azərbaycan</p>
+                            <p>+994(12) 123 45 67</p>
+                            <p>+994(12) 123 45 67</p>
+                            <p>info@lmegatexnika.az</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 ">
+                    <div class="foot-icon_text">
+                        <p>Qrafik (iş saatlarımız): B.e - Ş. 10:00 - 19:00</p>
+                    </div>
+                    <div class="foot-icon">
+                        <i class="fa-brands fa-instagram" style="color: #353535;"></i>
+                        <i class="fa-brands fa-facebook" style="color: #353535;"></i>
+                        <i class="fa-brands fa-twitter " style="color: #353535;"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="foot-subtitle">
+                <div class="foot-bottom">
+                    <p>© 2022 Megatexnika / Müəllif hüquqları</p>
+                    <p>Design by JEDAİ</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
