--- a/tech-about.html
+++ b/tech-about.html
@@ -116,47 +116,52 @@
             </ul>
         </div>
     </div>
-    <div class="container">
-        <div class="rent-sec">
-            <div class="smaal-card-img-part-1">
-                <img src="./assets/photo/tech-about-smaal-photo4.png" alt="">
-                <img src="./assets/photo/tech-about-smaal-photo2.png" alt="">
-                <img src="./assets/photo/tech-about-smaal-photo3.png" alt="">
-                <img src="./assets/photo/tech-about-smaal-photo4.png" alt="">
-                <img src="./assets/photo/tech-about-smaal-photo5.png" alt="">
-                <img src="./assets/photo/tech-about-smaal-photo6.png" alt="">
-            </div>
-            <div class="rent-sec-img-part2">
-                <img src="./assets/photo/tech-about-sec-1.png" alt="">
-            </div>
-            <div class="product--part">
-                <div class="product-head-txt-all">
-                    <div class="product-head-txt">
-                        <p class="product-name-txt1">Məhsulun adı</p>
-                        <p class="product-name-txt2">2017</p>
-                    </div>
-                    <span>
-                        <p class="product-name-bottom-txt">Ekskavator</p>
-                    </span>
+    <div class="bg-rent">
+        <div class="face_color"></div>
+        <div id="rent-sec-bg" class="container">
+            <div class="rent-sec">
+                <div class="smaal-card-img-part-1">
+                    <img src="./assets/photo/tech-about-smaal-photo4.png" alt="">
+                    <img src="./assets/photo/tech-about-smaal-photo2.png" alt="">
+                    <img src="./assets/photo/tech-about-smaal-photo3.png" alt="">
+                    <img src="./assets/photo/tech-about-smaal-photo4.png" alt="">
+                    <img src="./assets/photo/tech-about-smaal-photo5.png" alt="">
+                    <img src="./assets/photo/tech-about-smaal-photo6.png" alt="">
                 </div>
-                <div class="product-part-lorem">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer</p>
+                <div class="rent-sec-img-part2">
+                    <img src="./assets/photo/tech-about-sec-1.png" alt="">
                 </div>
-                <div class="rent-price-txt">
-                    <div class="rent-price-txt_in">
-                        <p>Günlük icarə:
-                        </p>
-                        <span>1000 AZN</span>
+                <div class="product--part">
+                    <div class="product-head-txt-all">
+                        <div class="product-head-txt">
+                            <p class="product-name-txt1">Məhsulun adı</p>
+                            <p class="product-name-txt2">2017</p>
+                        </div>
+                        <span>
+                            <p class="product-name-bottom-txt">Ekskavator</p>
+                        </span>
                     </div>
-                    <div class="rent-price-txt_in">
-                        <p>Günlük icarə:
-                        </p>
-                        <span>1000 AZN</span>
+                    <div class="product-part-lorem">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been
+                            the industry's standard dummy text ever since the 1500s, when an unknown printer</p>
                     </div>
-                </div>
-                <div class="rent-button">
-                    <button>Rent a day</button>
+                    <div class="rent-price-txt">
+                        <div class="rent-price-txt_in">
+                            <p>Günlük icarə:
+                            </p>
+                            <span>1000 AZN</span>
+                        </div>
+                        <div class="rent-price-txt_in">
+                            <p>Günlük icarə:
+                            </p>
+                            <span>1000 AZN</span>
+                        </div>
+                    </div>
+                    <div class="rent-button">
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal" data-bs-whatever="@mdo">Günlük icarə et</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -237,6 +242,41 @@
         </div>
     </div>
     <br><br><br><br><br>
+
+
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Məlumatları doldurun</h1>
+                    <button type="button" id="close" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <input placeholder="Ad və Soyad*" type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="mb-3">
+                            <input placeholder="Əlaqə nömrəsi*" type="number" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="mb-3">
+                            <input placeholder="E-mail*" type="email" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="mb-3">
+                            <input placeholder="Şirkətin adı" type="text" class="form-control" id="recipient-name">
+                        </div>
+
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="rentBtn" class="btn btn-warning">İcarə et</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <footer>
         <div class="own-container">
             <div class="row g-2">
@@ -283,6 +323,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./tech.js"></script>
 </body>
 
 </html>
