--- a/tech-about.html
+++ b/tech-about.html
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="rent-button">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-warning" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" data-bs-whatever="@mdo">Günlük icarə et</button>
                     </div>
                 </div>
@@ -244,13 +244,13 @@
     <br><br><br><br><br>
 
 
-
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Məlumatları doldurun</h1>
-                    <button type="button" id="close" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" id="close" class="btn-close" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -270,13 +270,22 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" id="rentBtn" class="btn btn-warning">İcarə et</button>
+                    <button type="button" id="rentBtn" class="btn btn-warning w-100">İcarə et</button>
                 </div>
             </div>
         </div>
     </div>
 
 
+    <!-- Vertically centered modal -->
+    <div class="modal-dialog modal-dialog-centered">
+        ...
+    </div>
+
+    <!-- Vertically centered scrollable modal -->
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        ...
+    </div>
     <footer>
         <div class="own-container">
             <div class="row g-2">
